     (Vincent Ladeuil, #160012)

   * Don't use timeout in HttpServer anymore.
     (Vincent Ladeuil, #158972).

   * FTP server errors don't error in the error handling code.
     (Robert Collins, #161240)

   * Obsolete packs are now cleaned up by pack and autopack operations.
     (Robert Collins, #153789)

   * Reconcile now shows progress bars. (Robert Collins, #159351)

   * Unicode-safe output from ``bzr info``. The output will be encoded
     using the terminal encoding and unrepresentable characters will be
     replaced by '?'. (Lukáš Lalinský, #151844)

   * Wrap medusa ftp test server as an FTPServer feature.
     (Vincent Ladeuil, #157752)

   * Fix exception when ScopeReplacer is assigned to before any members have
     been retrieved.  (Aaron Bentley)

  API BREAKS:

   * ``osutils.backup_file`` is deprecated. Actually it's not used in bzrlib
     during very long time. (Alexander Belchenko)

  INTERNALS:

  TESTING:


bzr 0.92rc1 2007-10-29
======================

  NOTES WHEN UPGRADING:

  CHANGES:
  
   * ``bzr`` now returns exit code 4 if an internal error occurred, and 
     3 if a normal error occurred.  (Martin Pool)

   * ``pull``, ``merge`` and ``push`` will no longer silently correct some
     repository index errors that occured as a result of the Weave disk format.
     Instead the ``reconcile`` command needs to be run to correct those
     problems if they exist (and it has been able to fix most such problems
     since bzr 0.8). Some new problems have been identified during this release
     and you should run ``bzr check`` once on every repository to see if you
     need to reconcile. If you cannot ``pull`` or ``merge`` from a remote
     repository due to mismatched parent errors - a symptom of index errors -
     you should simply take a full copy of that remote repository to a clean
     directory outside any local repositories, then run reconcile on it, and